--- a/index.html
+++ b/index.html
@@ -3397,13 +3397,13 @@ async function addDeliveryMarkers() {
         // Container de botões (será preenchido após criar o marker)
         const buttonsContainer = document.createElement('div');
         buttonsContainer.style.display = 'flex';
-        buttonsContainer.style.gap = '8px';
-        buttonsContainer.style.marginTop = '8px';
+        buttonsContainer.style.gap = '6px';
+        buttonsContainer.style.marginTop = '10px';
         infoWindowContent.appendChild(buttonsContainer);
 
         const infoWindow = new google.maps.InfoWindow({
             content: infoWindowContent,
-            maxWidth: 300,
+            maxWidth: 280,
             disableAutoPan: true
         });
 
@@ -3458,15 +3458,16 @@ async function addDeliveryMarkers() {
             // Botão de navegação
             const navigateBtn = document.createElement('button');
             navigateBtn.style.flex = '1';
-            navigateBtn.style.padding = '8px 12px';
+            navigateBtn.style.padding = '6px 10px';
             navigateBtn.style.background = '#4285f4';
             navigateBtn.style.color = 'white';
             navigateBtn.style.border = 'none';
-            navigateBtn.style.borderRadius = '6px';
-            navigateBtn.style.fontSize = '13px';
-            navigateBtn.style.fontWeight = 'bold';
+            navigateBtn.style.borderRadius = '4px';
+            navigateBtn.style.fontSize = '12px';
+            navigateBtn.style.fontWeight = '600';
             navigateBtn.style.cursor = 'pointer';
             navigateBtn.style.transition = 'background 0.2s';
+            navigateBtn.style.whiteSpace = 'nowrap';
             navigateBtn.innerHTML = '🧭 Navegar';
             navigateBtn.addEventListener('mouseenter', () => { navigateBtn.style.background = '#3367d6'; });
             navigateBtn.addEventListener('mouseleave', () => { navigateBtn.style.background = '#4285f4'; });
@@ -3475,15 +3476,16 @@ async function addDeliveryMarkers() {
             // Botão marcar como entregue
             const deliveredBtn = document.createElement('button');
             deliveredBtn.style.flex = '1';
-            deliveredBtn.style.padding = '8px 12px';
+            deliveredBtn.style.padding = '6px 10px';
             deliveredBtn.style.background = '#34A853';
             deliveredBtn.style.color = 'white';
             deliveredBtn.style.border = 'none';
-            deliveredBtn.style.borderRadius = '6px';
-            deliveredBtn.style.fontSize = '13px';
-            deliveredBtn.style.fontWeight = 'bold';
+            deliveredBtn.style.borderRadius = '4px';
+            deliveredBtn.style.fontSize = '12px';
+            deliveredBtn.style.fontWeight = '600';
             deliveredBtn.style.cursor = 'pointer';
             deliveredBtn.style.transition = 'background 0.2s';
+            deliveredBtn.style.whiteSpace = 'nowrap';
             deliveredBtn.innerHTML = '✓ Entregue';
             deliveredBtn.addEventListener('mouseenter', () => { deliveredBtn.style.background = '#2d8e47'; });
             deliveredBtn.addEventListener('mouseleave', () => { deliveredBtn.style.background = '#34A853'; });
@@ -3607,8 +3609,8 @@ async function addDeliveryMarkers() {
         // Container de botões (será preenchido após criar o marker)
         const buttonsContainer = document.createElement('div');
         buttonsContainer.style.display = 'flex';
-        buttonsContainer.style.gap = '8px';
-        buttonsContainer.style.marginTop = '12px';
+        buttonsContainer.style.gap = '6px';
+        buttonsContainer.style.marginTop = '10px';
         infoWindowContent.appendChild(buttonsContainer);
 
         const infoWindow = new google.maps.InfoWindow({
@@ -3689,15 +3691,16 @@ async function addDeliveryMarkers() {
             // Botão de navegação
             const navigateBtn = document.createElement('button');
             navigateBtn.style.flex = '1';
-            navigateBtn.style.padding = '8px 12px';
+            navigateBtn.style.padding = '6px 10px';
             navigateBtn.style.background = '#4285f4';
             navigateBtn.style.color = 'white';
             navigateBtn.style.border = 'none';
-            navigateBtn.style.borderRadius = '6px';
-            navigateBtn.style.fontSize = '13px';
-            navigateBtn.style.fontWeight = 'bold';
+            navigateBtn.style.borderRadius = '4px';
+            navigateBtn.style.fontSize = '12px';
+            navigateBtn.style.fontWeight = '600';
             navigateBtn.style.cursor = 'pointer';
             navigateBtn.style.transition = 'background 0.2s';
+            navigateBtn.style.whiteSpace = 'nowrap';
             navigateBtn.innerHTML = '🧭 Navegar';
             navigateBtn.addEventListener('mouseenter', () => { navigateBtn.style.background = '#3367d6'; });
             navigateBtn.addEventListener('mouseleave', () => { navigateBtn.style.background = '#4285f4'; });
@@ -3714,15 +3717,16 @@ async function addDeliveryMarkers() {
             // Botão marcar como entregue
             const deliveredBtn = document.createElement('button');
             deliveredBtn.style.flex = '1';
-            deliveredBtn.style.padding = '8px 12px';
+            deliveredBtn.style.padding = '6px 10px';
             deliveredBtn.style.background = '#34A853';
             deliveredBtn.style.color = 'white';
             deliveredBtn.style.border = 'none';
-            deliveredBtn.style.borderRadius = '6px';
-            deliveredBtn.style.fontSize = '13px';
-            deliveredBtn.style.fontWeight = 'bold';
+            deliveredBtn.style.borderRadius = '4px';
+            deliveredBtn.style.fontSize = '12px';
+            deliveredBtn.style.fontWeight = '600';
             deliveredBtn.style.cursor = 'pointer';
             deliveredBtn.style.transition = 'background 0.2s';
+            deliveredBtn.style.whiteSpace = 'nowrap';
             deliveredBtn.innerHTML = '✓ Entregue';
             deliveredBtn.addEventListener('mouseenter', () => { deliveredBtn.style.background = '#2d8e47'; });
             deliveredBtn.addEventListener('mouseleave', () => { deliveredBtn.style.background = '#34A853'; });
